2008-06-01  Hans Breuer  <hans@breuer.org>

	* app/display.c : get rid of HAVE_LIBART, there is antialiased 
	rendering with cairo, too. Update menu by plug-ins types 
	being available.
	* lib/font.c : now that I can look at the cairo renderer interactively
	the renderers font-size mismatch raised it's ugly head again. Some 
	code in	comment which does not solve the issue

	* app/app_procs.c : updated version dump for cairo and pango
	* configure.in : updated pango version required (to the same 
	already dragged in by gkt+ (still 2.6 as minimum)
	

2008-05-31  Hans Breuer  <hans@breuer.org>

	* lib/libdia.[ch] : new files containing the initialization code ...
	* app/app_procs.c : ... removed here ...
	* plug-ins/python/diamodule.c : ... to be useable from here
	* lib/Makefile.am lib/makefile.msc lib/libdia.def : adapted
	
	* app/diagram.c : there is no diagram_tree to update when not 
	running interactively, also no display to update

	[warningectomy]
	* lib/diaarrowchooser.c lib/persistence.[ch] : constness
	* lib/diagramdata.c : signedness
	* lib/font.c : initialization

	* objects/UML/association.c : moved calculation of the direction 
	triangle into it's own function and use it for bounding box 
	calculation and drawing. Fixes bug #158265

	* lib/diagtkfontsel.[ch] : not used for quite some time -> removed
	* lib/widgets.c lib/Makefile.am po/POTFILES.in : adapted/updated

2008-05-30  Hans Breuer  <hans@breuer.org>

	[ 
	  Moved libart rendering and it's PNG export to a plug-in.
	  So it can be switched off before being deprecated in favour of cairo. 
	]
	* plug-ins/libart/dialibartrenderer.[hc] : from lib/*
	* plug-ins/libart/export_png.c : moved from app/*
	* plug-ins/libart/render_libart.[hc] : moved from app/*
	* lib/dialogs.[hc] : moved from app/*
	* app/app_procs.[hc] : parse_size moved to plug-in
	* app/display.c : dynamically create the aa renderer like it is done 
	for the cairo renderer

	* app/Makefile.am app/makefile.msc plug-ins/makefile.msc